tests/NormalTests/paczka1/fuzzy1/49707841.err
Error in line 2: u3Z A602 6,2
Error in line 3: u3Z S216 69,1
Error in line 16: A602 A602 69,9
Error in line 29: u3Z A424 316,4
Error in line 28: yN2pZWGfxf A602 86,4
